syntax = "proto3";
package clients;
option go_package = "clients.v1;clients";

import "google/protobuf/timestamp.proto";

service ClientService {
  rpc CreateClient(CreateRequest) returns (Client);
  rpc GetClient(GetRequest) returns (Client);
  rpc UpdateClient(UpdateRequest) returns (Client);
  rpc DeleteClient(DeleteRequest) returns (DeleteResponse);
  rpc ListClients(ListRequest) returns (ListResponse);
  rpc RestoreClient(RestoreRequest) returns (Client);
}

message Client {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 type_id = 4;
  string website = 5;
  bool is_active = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message CreateRequest {
  string name = 1;
  string description = 2;
  int32 type_id = 4;
  string website = 5;
}

message GetRequest {
  string id = 1;
}

message UpdateRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional int32 type_id = 4;
  optional string website = 5;
}

message DeleteRequest {
  string id = 1;
  optional bool permanent = 2;
}

message DeleteResponse {
  bool success = 1;
}

message ListRequest {
  int32 page = 1;
  int32 count = 2;
  optional string search = 3;
  optional int32 type_id = 4;
  optional bool active_only = 5;
}

message ListResponse {
  repeated Client clients = 1;
  int32 total_count = 2;
}

message RestoreRequest {
  string id = 1;
}
